# Test_Enterprise_Data_Science

./: modeling_v2.ipynb  prepocessing_v2.ipynb
my_preprocessing_project/: config.yaml  pyproject.toml  ruff.toml  test.parquet  train.parquet  val.parquet
my_preprocessing_project/config/: config.yml
my_preprocessing_project/models/: xgboost_tuned.pkl
my_preprocessing_project/results/: xgboost_metrics.json
my_preprocessing_project/src/: preprocess.py  train_model.py
my_preprocessing_project/src/utils/: config.py
my_preprocessing_project/tests/: test_preprocessing.py
